# Cargo.toml - Configuration file for the Rust library project

[package] # This section defines the package metadata
name = "harper-c" # The name of the package, used when publishing or building
version = "0.2.0" # The current version of the package, following semantic versioning
edition = "2021" # The Rust edition to use; 2021 is the latest as of now

[lib] # This section specifies settings related to the library
name="harper"
crate-type = ["cdylib"] # This tells Cargo to compile the library as a dynamic library (CDylib)
path='./lib.rs'

[dependencies] # This section lists the dependencies required by the package
# If harper-core were published on crates.io, you could specify it like this:
harper-core = "0.32.1"

[workspace] # This section is for workspace configuration
# An empty workspace section indicates that this package is not part of a larger workspace.
# This allows users to build this example independently without needing to modify or include other packages.